--- a/domains/scholarshipacademy.uz/public_html/wp-content/themes/chinaeducation/css/style.css
+++ b/domains/scholarshipacademy.uz/public_html/wp-content/themes/chinaeducation/css/style.css
@@ -1808,7 +1808,7 @@ button {
 
 #contacts .map {
     box-shadow: 0 0 20px rgba(0, 0, 0, .1);
-    
+
     overflow:hidden;
     position: static;
     /*position: absolute;*/
@@ -1817,7 +1817,7 @@ button {
     width:100%;
     padding-top:90px;
      padding-left:5px;
-    
+
     /*float:right;*/
     bottom: 0;
 }
@@ -3243,8 +3243,8 @@ button.styler[disabled], input[type=button].styler[disabled], input[type=submit]
 
     #contacts .map {
         position: static;
-        
-        
+
+
     }
 
     .fancybox-slide--html .fancybox-close-small {
@@ -3365,5 +3365,32 @@ button.styler[disabled], input[type=button].styler[disabled], input[type=submit]
         right: 0;
         top: 0;
         width: 36px
+    }
+}
+
+.row{
+    width: 40%;
+    margin-top: 70px
+}
+
+
+
+@media (max-width: 1020px) {
+
+    .cont{
+        align-content: center;
+        display: flex;
+        flex-direction: column;
+        /*font-size: 10px;*/
+    }
+    .row{
+        width: 100%;
+    }
+    .con{
+        text-align: center;
+        width: 100%;
+    }
+     iframe{
+        width: 100%;
     }
 }
